--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,54 @@
     transform: rotate(360deg);
   }
 }
+ .main{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
+
+ .main h1{
+  color:rgb(47, 9, 117);
+  box-shadow: 5px solid rgba(47, 9, 117, 0.5);
+}
+
+.main button{
+  margin:10px;
+  background-color: yellowgreen;
+  width:30%;
+  height:35px;
+  font-size: 20px;
+  color: red;
+}
+ a{
+   text-decoration: none;
+ }
+
+ .menu{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
+
+ .menu h1{
+  color:rgb(47, 9, 117);
+  box-shadow: 5px solid rgba(47, 9, 117, 0.5);
+ }
+
+ .menu button{
+  flex-flow: row wrap;
+  margin:10px;
+  background-color: yellowgreen;
+  height:25px;
+  width: 20%;
+  font-size: 20px;
+  color: red;
+ }
+
+ .food{
+   color: brown;
+   font-size:18px;
+   font-family: comic sans-serif;
+ }
+
+ 
